# voicevox_engine_cpp

./: .gitignore  CMakeLists.txt  LICENSE
include/vvengine/: acoustic_feature_extractor.h  audio_writer.h  engine.h  full_context_label.h  openjtalk_wrapper.h
src/: audio_writer.cc  engine.cc  full_context_label.cc  openjtalk_wrapper.cc  vv.cc
